--- a/everytime/login.html
+++ b/everytime/login.html
@@ -23,7 +23,7 @@
         </div>
         <footer>
             <ul class="page_detail">
-                <li><a href="">이용약관</a></li>
+                <li class="detail_first"><a href="">이용약관</a></li>
                 <li><a href="" class="bold">개인정보처리방침</a></li>
                 <li><a href="">문의하기</a></li>
                 <li><a href="" class="bold">ⓒ 에브리타임</a></li>
