--- a/everytime/main.html
+++ b/everytime/main.html
@@ -28,6 +28,10 @@
             <a href="https://everytime.kr/my"><img src="img/나.png" alt="회원 정보" width="24px" height="24px"></a>
         </div>
     </nav>
+    <nav class="mobile_header">
+        <a href="" class="full_menu"><img src="img/aside.title.hamburger.png" alt="전체 메뉴" width="25"></a>
+        <a href="#" class="secret_board">비밀게시판</a>
+    </nav>
     <nav>
         <div class="messageboard">
             <div>
@@ -108,7 +112,7 @@
         </div>
     </nav>
     <div class="main_content">
-        <div>
+        <div class="main_post">
             <div>
                 <div id="name">
                     <h1>비밀게시판</h1>
@@ -194,7 +198,6 @@
         </div>
         <section>
             <div class="side">
-
                 <div class="side_title">
                     <p>HOT 게시물</p>
                     <a href="" class="more_content">더 보기</a>
@@ -273,7 +276,7 @@
             </div>
         </section>
     </div>
-    <footer>
+    <footer class="footer">
         <div class="website_detail">
             <ul>
                 <li><a href="https://everytime.kr/page/serviceagreement">이용약관</a></li>
