[0501] 도서관 반응형

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -10,7 +10,7 @@
 
     <div class="headerNav">
       <header>
-        <div>
+        <div class="head_div">
           <img src="img/ds-logo.jpg">
         </div>
       </header>
@@ -26,6 +26,15 @@
           <li>Help Desk</li>
           <li>My Library</li>
         </ul>
+      </nav>
+
+      <nav class="navbar2">
+        <div>
+          <img src="img/tm-all.png">
+        </div>
+        <div>
+          <img src="img/ds-btn-my.jpg">
+        </div>
       </nav>
     </div>
     
@@ -45,7 +54,7 @@
           <p>서비스신청 현황</p>
         </div>
 
-        <div class="section2_img">
+        <div class="section2_img" id="sec2_img1">
           <img src="img/main-q3.png">
           <p>자료구입신청</p>
         </div>
@@ -65,7 +74,7 @@
           <p>도서관이용안내</p>
         </div>
 
-        <div class="section2_img">
+        <div class="section2_img" id="sec2_img2">
           <img src="img/main-q8.png">
           <p>PLAy N Create</p>
         </div>
@@ -100,44 +109,44 @@
   
           <!-- <hr color="black"> -->
   
-          <div>
+          <div class="setion3_text">
             <div class="section3_2">
-              <span class="">제 10회 도서관 리베상 안내</span><br>
+              <span class="text">제 10회 도서관 리베상 안내</span><br>
               <span class="date">2024.04.01</span>
             </div>
   
             <!-- <hr class="section3_hr"> -->
   
             <div class="section3_2">
-              <span>제 60회 도서관 주간 기념 영화자료 전시 '영화로 만나는 미래' | 4/1~4/26</span><br>
+              <span class="text">제 60회 도서관 주간 기념 영화자료 전시 '영화로 만나는 미래' | 4/1~4/26</span><br>
               <span class="date">2024.03.29</span>
             </div>
   
             <!-- <hr class="section3_hr"> -->
   
             <div class="section3_2">
-              <span>PLAy N Create(플랭크) 단축운영 안내</span><br>
+              <span class="text">PLAy N Create(플랭크) 단축운영 안내</span><br>
               <span class="date">2024.03.29</span>
             </div>
   
             <!-- <hr class="section3_hr"> -->
   
             <div class="section3_2">
-              <span>2024 뉴욕타임스 퀴즈 이벤트 | 4월 1일 ~ 4월 15일</span><br>
+              <span class="text">2024 뉴욕타임스 퀴즈 이벤트 | 4월 1일 ~ 4월 15일</span><br>
               <span class="date">2024.03.28</span>
             </div>
   
             <!-- <hr class="section3_hr"> -->
   
             <div class="section3_2">
-              <span>DBpia 4월 온라인 이용교육 안내</span><br>
+              <span class="text">DBpia 4월 온라인 이용교육 안내</span><br>
               <span class="date">2024.03.28</span>
             </div>
   
             <!-- <hr class="section3_hr"> -->
   
             <div class="section3_2">
-              <span>제 57회 독서카페 참여자 대상 독후감 공모 안내</span><br>
+              <span class="text">제 57회 독서카페 참여자 대상 독후감 공모 안내</span><br>
               <span class="date">2024.03.26</span>
             </div>
           </div>
