--- a/everytime/login.html
+++ b/everytime/login.html
@@ -16,7 +16,7 @@
     
       <input type="text" placeholder="아이디" class="idBox"><br>
       <input type="password" placeholder="비밀번호" class="idBox"><br>
-      <input type="submit" value="에브리타임 로그인" class="idBox" style="padding:1px 2px; width:404px; height:37px">
+      <input type="submit" value="에브리타임 로그인" class="idBox">
     </form>
   
     <p><a href="#">회원가입</a></p>
