[0501] 도서관 반응형

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -20,6 +20,12 @@
                 <li>Help Desk</li>
                 <li>My Library</li>
             </ul>
+            <a class="hidden1" ng-click="toggleOverviewShow()">
+                <span>Overview</span>
+            </a>
+            <a class="hidden2" ng-click="toggleOverviewShow()">
+                <span>Overview</span>
+            </a>
         </nav>
     </header>
     <main>
@@ -29,16 +35,16 @@
         </section>
         <!-- 메뉴 아이콘 -->
         <section id="menu-icons">
-        <div class="ds-background">
+        <div class="ds-quick-wrap">
             <ul class="ds-quick">
-                <li><div class="menu-click"><img src="./img/main-q1.png" alt="대출/연장/예약" class="main-q1"><span>대출/연장/예약</span></div></li>
-                <li><div class="menu-click"><img src="./img/main-q2.png" alt="서비스신청 현황" class="main-q2"><span>서비스신청 현황</span></div></li>
-                <li><div class="menu-click"><img src="./img/main-q3.png" alt="자료구입신청" class="main-q3"><span>자료구입신청</span></div></li>
-                <li><div class="menu-click"><img src="./img/main-q5.png" alt="원문복사신청" class="main-q5"><span>원문복사신청</span></div></li>
-                <li><div class="menu-click"><img src="./img/main-q6.png" alt="모바일이용증" class="main-q6"><span>모바일이용증</span></div></li>
-                <li><div class="menu-click"><img src="./img/main-q7.png" alt="도서관이용안내" class="main-q7"><span>도서관이용안내</span></div></li>
-                <li><div class="menu-click"><img src="./img/main-q9.png" alt="PLAy N Create" class="main-q9"><span>PLAy N Create</span></div></li>
-                <li><div class="menu-click"><img src="./img/main-q8.png" alt="스터디룸예약" class="main-q8"><span>스터디룸예약</span></div></li>
+                <li><div class="menu-click1"><img src="./img/main-q1.png" alt="대출/연장/예약" class="main-q1"><span>대출/연장/예약</span></div></li>
+                <li><div class="menu-click2"><img src="./img/main-q2.png" alt="서비스신청 현황" class="main-q2"><span>서비스신청 현황</span></div></li>
+                <li><div class="menu-click3"><img src="./img/main-q3.png" alt="자료구입신청" class="main-q3"><span>자료구입신청</span></div></li>
+                <li><div class="menu-click4"><img src="./img/main-q5.png" alt="원문복사신청" class="main-q5"><span>원문복사신청</span></div></li>
+                <li><div class="menu-click5"><img src="./img/main-q6.png" alt="모바일이용증" class="main-q6"><span>모바일이용증</span></div></li>
+                <li><div class="menu-click6"><img src="./img/main-q7.png" alt="도서관이용안내" class="main-q7"><span>도서관이용안내</span></div></li>
+                <li><div class="menu-click7"><img src="./img/main-q9.png" alt="PLAy N Create" class="main-q9"><span>PLAy N Create</span></div></li>
+                <li><div class="menu-click8"><img src="./img/main-q8.png" alt="스터디룸예약" class="main-q8"><span>스터디룸예약</span></div></li>
             </ul>
         </div>
         </section>
