[0501] 도서관 반응형

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -33,7 +33,13 @@
     </header>
 
     <nav>
-        <div class="lib_logo"><img src="./img/logo.jpg" alt="도서관 로고" width=220 height=50></div>
+        <div class="navset">
+            <div class="lib_logo"><img src="./img/logo.jpg" alt="도서관 로고" width=220 height=45></div>
+            <div class="nav_img">
+                <div class="nav_img1"><img src="./img/list.png" width=25 height=25></div>
+                <div class="nav_img1"><img src="./img/person.jpg" width=25 height=25></div>
+            </div>
+        </div>
         <div class="nav_list">
             <div>e컨텐츠</div>
             <div>이용자서비스</div>
@@ -52,37 +58,41 @@
 
     <section>
         <div class="service">
-            <div class="service1">
-                <div><img src="./img/book.png" alt="대출/연장/예약" width=75 height=75></div>
-                <div class="serv_name">대출/연장/예약</div>
+            <div class="service2">
+                <div class="service1">
+                    <div><img src="./img/book.png" alt="대출/연장/예약" width=75 height=75></div>
+                    <div class="serv_name">대출/연장/예약</div>
+                </div>
+                <div class="service1">
+                    <div><img src="./img/service.png" alt="서비스신청 현황" width=75 height=75></div>
+                    <div class="serv_name">서비스신청 현황</div>
+                </div>
+                <div class="service3">
+                    <img src="./img/buy.png" alt="자료구입신청" width=75 height=75>
+                    <div class="serv_name">자료구입신청</div>
+                </div>
+                <div class="service1">
+                    <img src="./img/copy.png" alt="원문복사신청" width=75 height=75>
+                    <div class="serv_name">원문복사신청</div>
+                </div>
             </div>
-            <div class="service1">
-                <div><img src="./img/service.png" alt="서비스신청 현황" width=75 height=75></div>
-                <div class="serv_name">서비스신청 현황</div>
-            </div>
-            <div class="service1">
-                <img src="./img/buy.png" alt="자료구입신청" width=75 height=75>
-                <div class="serv_name">자료구입신청</div>
-            </div>
-            <div class="service1">
-                <img src="./img/copy.png" alt="원문복사신청" width=75 height=75>
-                <div class="serv_name">원문복사신청</div>
-            </div>
-            <div class="service1">
-                <img src="./img/mobile.png" alt="모바일이용증" width=75 height=75>
-                <div class="serv_name">모바일이용증</div>
-            </div>
-            <div class="service1">
-                <img src="./img/info.png" alt="도서관이용안내" width=75 height=75>
-                <div class="serv_name">도서관이용안내</div>
-            </div>
-            <div class="service1">
-                <img src="./img/playn.png" alt="PLAy N Create" width=75 height=75>
-                <div class="serv_name">PLAy N Create</div>
-            </div>
-            <div class="service1">
-                <img src="./img/studyroom.png" alt="스터디룸예약" width=75 height=75>
-                <div class="serv_name">스터디룸예약</div>
+            <div class="service2">
+                <div class="service3">
+                    <img src="./img/mobile.png" alt="모바일이용증" width=75 height=75>
+                    <div class="serv_name">모바일이용증</div>
+                </div>
+                <div class="service1">
+                    <img src="./img/info.png" alt="도서관이용안내" width=75 height=75>
+                    <div class="serv_name">도서관이용안내</div>
+                </div>
+                <div class="service1">
+                    <img src="./img/playn.png" alt="PLAy N Create" width=75 height=75>
+                    <div class="serv_name">PLAy N Create</div>
+                </div>
+                <div class="service1">
+                    <img src="./img/studyroom.png" alt="스터디룸예약" width=75 height=75>
+                    <div class="serv_name">스터디룸예약</div>
+                </div>
             </div>
         </div>
     </section>
