[0501] 도서관 반응형

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -26,6 +26,11 @@
             <div class="bannerword">Help Desk</div> 
             <div class="bannerword">My Library</div>
         </div>
+
+        <div class="top_right_hidden">
+            <img src="library_img/tm-all.png" width="20" height="20">
+            <img src="library_img/ds-btn-my.jpg" width="20" height="20">
+        </div>
     </div><br>
 
     <div class="mainimg"><br>
@@ -55,7 +60,7 @@
             </div>
         </div>
 
-        <div class="midset">
+        <div class="midset_no1">
             <div class="littleimg">
                 <img src="library_img/main-q3.png" width="70" height="70">
             </div>
@@ -75,7 +80,7 @@
             </div>
         </div>
 
-        <div class="midset">
+        <div class="midset_no2">
             <div class="littleimg">
                 <img src="library_img/main-q6.png" width="70" height="70">
             </div>
