[05/01] 도서관 반응형

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
+<head>
 <link>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>덕성여자대학교 도서관</title>
-    <link rel="stylesheet" href="./css/library.css"></link>
+    <title>덕성여자대학교 도서관</title>
+    <link rel="stylesheet" href="./css/library.css">
+</link>
 </head>
 <body>
     <nav class="nav">
@@ -23,6 +25,10 @@
                 <li>My Library</li>
             </ul>
         </div>
+        <div class="wrap_bar">
+            <img id="btn" src="./library_img/tm-all.png", alt="메뉴바">
+            <img id="dsbtn" src="./library_img/ds-btn-my.jpg", alt="덕성버튼">
+        </div>
     </nav>
     <section class="section">
         <section class="sec1">
@@ -34,35 +40,35 @@
             <ul class="cat_bar">
                 <li class="bar">
                     <img class="img1" src="./library_img/library_img/main-q1.png", alt="대출/연장/예약">
-                    <p class="title">대출/연장/예약</p>
+                    <p id="title">대출/연장/예약</p>
                 </li>
                 <li class="bar">
                     <img class="img2" src="./library_img/library_img/main-q2.png", alt="서비스신청현황">
-                    <p class="title">서비스신청현황</p>
+                    <p id="title">서비스신청현황</p>
                 </li>
                 <li class="bar">
                     <img class="img3" src="./library_img/library_img/main-q3.png", alt="자료구입신청">
-                    <p class="title">자료구입신청</p>
+                    <p id="title">자료구입신청</p>
                 </li>
                 <li class="bar">
                     <img class="img4" src="./library_img/library_img/main-q5.png", alt="원문복사신청">
-                    <p class="title">원문복사신청</p>
+                    <p id="title">원문복사신청</p>
                 </li>
                 <li class="bar">
                     <img class="img5" src="./library_img/library_img/main-q6.png", alt="모바일이용증">
-                    <p class="title">모바일이용증</p>
+                    <p id="title">모바일이용증</p>
                 </li>
                 <li class="bar">
                     <img class="img6" src="./library_img/library_img/main-q7.png", alt="도서관이용안내">
-                    <p class="title">도서관이용안내</p>
+                    <p id="title">도서관이용안내</p>
                 </li>
                 <li class="bar">
                     <img class="img7" src="./library_img/library_img/main-q9.png", alt="PLAy N Create">
-                    <p class="title">PLAy N Create</p>
+                    <p id="title">PLAy N Create</p>
                 </li>
                 <li class="bar">
                     <img class="img8" src="./library_img/library_img/main-q8.png", alt="스터디룸예약">
-                    <p class="title">스터디룸예약</p>
+                    <p id="title">스터디룸예약</p>
                 </li>
             </ul>
         </div>
