[0502]에브리타임 반응형

--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -167,7 +167,8 @@
         </div>
     </section>
     <footer class="copyright">
-        <p>Copyright(c) 2015 Duksung Women's University Library.All rights Reserved</p>
+        <p>Copyright(c) 2015 Duksung Women's University Library.</p>
+        <p>All rights Reserved</p>
     </footer>
     <div class="top_button">
         <a href="#top"><img src="img/ds-static-top.png" alt="맨 위로" width="60"></a>
