[0502]에브리타임 반응형

--- a/everytime/everytime3/detail.html
+++ b/everytime/everytime3/detail.html
@@ -20,12 +20,12 @@
       </div>
       <div class="text">
       <p class="link">게시판</p>
-      <p>시간표</p>
-      <p>강의실</p>
-      <p>학점계산기</p>
-      <p>친구</p>
-      <p>책방</p>
-      <p>캠퍼스픽</p>
+      <p class="head_p_1">시간표</p>
+      <p class="head_p_2">강의실</p>
+      <p class="head_p_3">학점계산기</p>
+      <p class="head_p_4">친구</p>
+      <p class="head_p_5">책방</p>
+      <p class="head_p_6">캠퍼스픽</p>
     </div>
     <div class="img2">
     <img class="message"
@@ -36,8 +36,22 @@
       src="./img/icn_m_account_gray800_light.png" alt="사진로딩중"
     >
     </div>
+    
+    <div class="head_ham">
+        <img class="head_ham_img" src="./img/aside.title.hamburger.png" alt="사진 로딩 중">
+    </div>
+
   </div>
 </header>
+
+<div class="border"></div>
+
+<!--햄버거-->
+<div class="ham_bar">
+    <img class="ham_img" src="./img/aside.title.hamburger.png" alt="사진 로딩 중">
+    <span class="ham_txt">비밀게시판</span>
+</div>
+
     <!--여기가 원래 navigation라인-->
 <div class="container">
   <div class="text_1">
@@ -212,6 +226,102 @@
             </div>
         
 </section>
+
+<!--반응형 때문에 추가한 section-->
+<div class="moving_section_1">
+    <div class="bluethings">
+        <img class="blue_ask" src="./img/icn_mcr_board_question_light.png" alt="이미지 로딩 중">
+        <p class="duksung">덕성</p>
+        <p class="num">12기</p>
+        <p class="power">파이팅~</p>
+      </div>
+      <div class="redthings">
+        <img class="red_fire" src="./img/icn_mcr_board_hotarticle_light.png" alt="이미지 로딩 중">
+        <p class="best">덕멋최고</p>
+        <p class="grr">어흥</p>
+      </div>
+</div>
+<div class="gray_back">
+    <div class="moving_section_2">
+        <span class="new"><p>새 글을 작성해주세요!</p></span>
+        <img class="pen" src="./img/container.write.background.png" alt="이미지 로딩 중">
+    </div>
+</div>
+
+<div class="moving_section_3">
+    <div class="like">
+    <p class="sorry"> 네가 "깃아 미안해" 했잖아?</p>
+    <p class="no">그럼 깃 충돌 이딴거 안생겼어</p>
+<div class="like_comment">
+      <img class="likes" src="./img/container.articles.vote.png" alt="이미지 로딩 중">
+      <span class="ten">10</span>
+
+      <img class="comment" src="./img/container.articles.comment.png" alt="이미지 로딩 중">
+      <span class="seventeen">17</span>
+      <span class="min">| 10분전 | 익명</span>
+    </div>
+</div>
+    <div class="lion">
+        <img class="lions" src="./img/likelion.png" alt="이미지 로딩 중">
+    </div>
+</div>
+
+
+<div class="moving_section_3">
+    <div class="like">
+    <p class="sorry"> 심각한 멋사 중독입니다</p>
+    <p class="no">흥 무슨 소리 세션이나 들어 어흥</p>
+<div class="like_comment">
+      <img class="likes" src="./img/container.articles.vote.png" alt="이미지 로딩 중">
+      <span class="ten">10</span>
+
+      <img class="comment" src="./img/container.articles.comment.png" alt="이미지 로딩 중">
+      <span class="seventeen">17</span>
+      <span class="min">| 20분전 | 익명</span>
+    </div>
+</div>
+    <div class="lion">
+        <img class="lions" src="./img/likelion.png" alt="이미지 로딩 중">
+    </div>
+</div>
+
+<div class="moving_section_3">
+    <div class="like">
+    <p class="sorry"> 꽁꽁 얼어붙은 한강 위로</p>
+    <p class="no">아기 사자가 걸어다닙니다</p>
+<div class="like_comment">
+      <img class="likes" src="./img/container.articles.vote.png" alt="이미지 로딩 중">
+      <span class="ten">10</span>
+
+      <img class="comment" src="./img/container.articles.comment.png" alt="이미지 로딩 중">
+      <span class="seventeen">17</span>
+      <span class="min">| 30분전 | 익명</span>
+    </div>
+</div>
+    <div class="lion">
+        <img class="lions" src="./img/likelion.png" alt="이미지 로딩 중">
+    </div>
+</div>
+
+
+<div class="moving_section_3">
+    <div class="like">
+    <p class="sorry"> 네가 "깃아 미안해" 했잖아?</p>
+    <p class="no">그럼 깃 충돌 이딴거 안생겼어</p>
+<div class="like_comment">
+      <img class="likes" src="./img/container.articles.vote.png" alt="이미지 로딩 중">
+      <span class="ten">10</span>
+
+      <img class="comment" src="./img/container.articles.comment.png" alt="이미지 로딩 중">
+      <span class="seventeen">17</span>
+      <span class="min">| 40분전 | 익명</span>
+    </div>
+</div>
+    <div class="lion">
+        <img class="lions" src="./img/likelion.png" alt="이미지 로딩 중">
+    </div>
+</div>
+
 <!--aside 라인-->
 
 <aside class="aside_all">
