[0507] 에브리타임 반응형

--- a/everytime/login.html
+++ b/everytime/login.html
@@ -33,7 +33,7 @@
             <div>이용약관</div>
             <div>개인정보처리방침</div>
             <div>문의하기</div>
-            <div>c 에브리타임</div>
+            <div>&copy; 에브리타임</div>
         </div>
     </footer>
 </body>
