--- a/everytime/main.html
+++ b/everytime/main.html
@@ -18,18 +18,26 @@
                 <div class="schname">덕성여대</div>
             </div>
         </div>
-        <ul class="bigcate" style="list-style:none">
-            <li class="check">게시판</li>
-            <li>시간표</li>
-            <li>강의실</li>
-            <li>학점계산기</li>
-            <li>친구</li>
-            <li>책방</li>
-            <li>캠퍼스픽</li>
-        </ul>
-        <div class="anofunc">
-            <img class="eachfunc" src="./img/chat.png" alt="comment" width=25 height=25>
-            <img class="eachfunc" src="./img/person.png" alt="person" width=25 height=25>
+        <div class="headhid">
+            <ul class="bigcate" style="list-style:none">
+                <li class="check">게시판</li>
+                <li>시간표</li>
+                <li>강의실</li>
+                <li>학점계산기</li>
+                <li>친구</li>
+                <li>책방</li>
+                <li>캠퍼스픽</li>
+            </ul>
+            <div class="anofunc">
+                <img class="eachfunc" src="./img/chat.png" alt="comment" width=25 height=25>
+                <img class="eachfunc" src="./img/person.png" alt="person" width=25 height=25>
+            </div>
+
+            <div class="sm_header">
+                <div class="smh1"><img src="./img/listbar.png" width=25 height=25></div>
+                <div class="smh2">덕성여대 에브리타임</div>
+                <div class="smh3">글 검색</div>
+            </div>
         </div>
     </header>
 
@@ -313,7 +321,7 @@
             <div>커뮤니티이용규칙</div>
             <div>공지사항</div>
             <div>문의하기</div>
-            <div class="boldlet">c 에브리타임</div>
+            <div class="boldlet">&copy; 에브리타임</div>
         </div>
         <div class="extrainfo">
             <div>직업정보제공사업 신고번호 : J1204020230008</div>
