--- a/ds_library/library.html
+++ b/ds_library/library.html
@@ -53,7 +53,7 @@
     </nav>
 
     <section>
-        <div class="search"><img src="./img/search section.png" width=100% height=280></div>
+        <div class="search"><img src="./img/search section.png"></div>
     </section>
 
     <section>
@@ -81,15 +81,15 @@
                     <img src="./img/mobile.png" alt="모바일이용증" width=75 height=75>
                     <div class="serv_name">모바일이용증</div>
                 </div>
-                <div class="service1">
+                <div class="service5">
                     <img src="./img/info.png" alt="도서관이용안내" width=75 height=75>
                     <div class="serv_name">도서관이용안내</div>
                 </div>
-                <div class="service1">
+                <div class="service6">
                     <img src="./img/playn.png" alt="PLAy N Create" width=75 height=75>
                     <div class="serv_name">PLAy N Create</div>
                 </div>
-                <div class="service1">
+                <div class="service4">
                     <img src="./img/studyroom.png" alt="스터디룸예약" width=75 height=75>
                     <div class="serv_name">스터디룸예약</div>
                 </div>
@@ -146,7 +146,7 @@
 
         <aside>
             <div>
-                <img src="./img/lib_info.png" alt="도서관 이용 안내" width=550, height=450>
+                <img src="./img/lib_info.png" alt="도서관 이용 안내" class="infoimg">
             </div>
         </aside>
     </div>
