[0507] 에브리타임 반응형

--- a/everytime/main.html
+++ b/everytime/main.html
@@ -13,12 +13,14 @@
           <img src="img/logo.png" alt="에브리타임로고" />
         </div>
       </div>
-
       <div id="account">
         <img src="img/chat.png" alt="쪽지함" />
         <img src="img/person.png" alt="쪽지함"/>
       </div>
-
+      <div class="mobile-menu-toggle">
+        <img src="img/aside.title.hamburger.png" alt="햄버거">
+        <p>비밀게시판</p>
+      </div>
       <ul id="menu">
         <li>게시판</li>
         <li>시간표</li>
@@ -129,42 +131,66 @@
       <div class="wrap bubbles">
         <div class="bubble question"><img src="img/questImg.png" alt="말풍선"/>
           <div class="items">
-            <div class="item"><span>교환</span></div>
-            <div class="item"><span>이러닝</span></div>
-            <div class="item"><span>덕기초 노트북으로 들으려는데 줌설치 어떻게</span></div>
+            <div class="item"><span>덕성</span></div>
+            <div class="item"><span>12기</span></div>
+            <div class="item"><span>파이팅~</span></div>
           </div>
         </div>
         <div class="bubble hot"><img src="img/hotImg.png" alt="핫게"/>
           <div class="items">
-            <div class="item"><span>오늘 수유동에서</span></div>
+            <div class="item"><span>덕멋최고</span></div>
+            <div class="item"><span>어흥</span></div>
           </div>
       </div>
     </div>
       <div class="newWrite"><span style="display: inline-block;">새 글을 작성해주세요!</span><img alt="pen" src="img/pen.png" style="width: 20px; height: 20px; float: right;"></div>
       <article class="list">
-        <div class="article">
-        <p class="bold">이거 답이 뭐임?</p> 
-        <p class="medium">닝닝하고 지젤만 정답인줄 알았늗데 아니야?</p>
-        <div class="slist">
-          <p>방금 | 익명</p>
+        <div class="imgflex">
+          <div class="article">
+            <p class="bold">네가 "깃아 미안해" 했잖아?</p>
+            <p class="medium">그럼 깃 충돌 이딴거 안생겼어</p>
+            <div class="slist">
+              <ul class="likeAndReply">
+                <li style="color: #f91f15"><img alt="공감" src="img/like.png"/>71</li>
+                <li style="color : #7bd8d4 "><img alt="reply" src="img/reply.png"/>13</li>
+                <li style="margin-left: 10px;">| 10분전 | 익명</li>
+              </ul>
+            </div>
+          </div>
+          <div class="preview"><img src="img/preview.png"></div>
         </div>
-      </div>
     </article>
     <article class="list" style="margin-top: 0%;">
+    <div class="imgflex">
       <div class="article">
-        <p class="bold">덕다</p>
-        <p class="medium">11시까지 맞지??</p>
+        <p class="bold">심각한 멋사 중독입니다</p>
+        <p class="medium">흥 무슨 소리 세션이나 들어 어흥</p>
         <div class="slist">
-          <p>방금 | 익명</p>
+          <ul class="likeAndReply">
+            <li style="color: #f91f15"><img alt="공감" src="img/like.png"/>15</li>
+            <li style="color : #7bd8d4 "><img alt="reply" src="img/reply.png"/>10</li>
+            <li style="margin-left: 10px;">| 20분전 | 익명</li>
+          </ul>
         </div>
-    </article> 
+      </div>
+      <div class="preview"><img src="img/preview.png"></div>
+    </div>
+    </article>
     <article class="list" style="margin-top: 0%;">
-      <div class="article">
-        <p class="bold">프친</p>
-        <p class="medium">프친과제 개망한 것같은데 제출한 덕우 있어? 문제부터 뭐라는 건지 모르겠음;;</p>
-        <div class="slist">
-          <p>방금 | 익명</p>
+      <div class="imgflex">
+        <div class="article">
+          <p class="bold">꽁꽁 얼어붙은 한강 위로</p>
+          <p class="medium">아기 사자가 걸어다닙니다</p>
+          <div class="slist">
+            <ul class="likeAndReply">
+              <li style="color: #f91f15"><img alt="공감" src="img/like.png"/>88</li>
+              <li style="color : #7bd8d4 "><img alt="reply" src="img/reply.png"/>4</li>
+              <li style="margin-left: 10px;">| 30분전 | 익명</li>
+            </ul>
+          </div>
         </div>
+        <div class="preview"><img src="img/preview.png"></div>
+      </div>
     </article> 
 
     <div class="rightside">
